styles/main.css
/* GENERAL STYLING */
body {
	background-color: #D9EDDF;
}



/* STYLING FOR CHECKBOX EVENTS */
.dark-theme {
	background-color: black;
	color: white;

}


.large-text {
	font-size: 2em;
}


/* NAVBAR */
#whatever {
	width: 618px;
	margin-right: 19px;
}

/* MESSAGE DIV */
.board {
	text-align: center;
	width: 618px;
	border: 1px solid black;
	height: unset;
}

.header {
	font-size: 1.5em;

}

.message {
position: relative;
width: 400px;
height: 40px;
padding: 2px;
background: #00C9D0;
-webkit-border-radius: 13px;
-moz-border-radius: 13px;
border-radius: 13px;
margin: 9px;
box-shadow: 2px 2px 1px ghostwhite;
}

.message:after 
{
content: '';
position: absolute;
border-style: solid;
border-width: 6px 14px 6px 0;
border-color: transparent #00C9D0;
display: block;
width: 0;
z-index: 1;
left: -14px;
top: 16px;
}

/* BUTTONS */

.btn {
	    margin: 1px -12px 5px 14px;
}

